--- a/classes/apps/converse/index.html
+++ b/classes/apps/converse/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>SparkWeb Client</title>
-	<link type="text/css" rel="stylesheet" media="screen" href="./converse.css">
-	<script src="converse-web-components.js"></script>	
-	<script src="index.js"></script>
+	<link type="text/css" rel="stylesheet" media="screen" href="./web-components.css">
+	<script src="./web-components.js"></script>	
+	<script src="./index.js"></script>
 </head>
 <body>
 	<converse-root id="conversejs"  class="conversejs converse-fullscreen theme-concord">
