work-in-progress

--- a/classes/apps/converse/index.html
+++ b/classes/apps/converse/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SparkWeb Client</title>
-	<link type="text/css" rel="stylesheet" media="screen" href="./web-components.css">
+    <title>SparkWeb Converse</title>
+	<link type="text/css" rel="stylesheet" media="screen" href="./converse.css">
+	<link type="text/css" rel="stylesheet" media="screen" href="./pade.css">	
 	<script src="./web-components.js"></script>	
 	<script src="./index.js"></script>
 </head>
 <body>
-	<converse-root id="conversejs"  class="conversejs converse-fullscreen theme-concord">
-    </converse-root>
+	<converse-root id="conversejs"  class="conversejs converse-fullscreen theme-concord"></converse-root>
 </body>
 </html>	
