tested ok with openfire 4.8.1

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
 SparkWeb Plugin Changelog
 </h1>
 
+<p><b>0.0.2</b> -- March 31, 2024</p>
+<ul>
+     <li></li>
+</ul>
+
 <p><b>0.0.1</b> -- December 31, 2023</p>
 <ul>
      <li>Initial release. </li>
